<resources>
    <string name="app_name">TaskMaster</string>
    <string name="button_add">Add Task</string>
    <string name="button_get">View All Tasks</string>
    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="task_state">Open/ Accepted/ Complete</string>
    <string name="task_available">Available?</string>
    <string name="task_assigned">Assigned?</string>
    <string name="task_accepted">Accepted?</string>
    <string name="task_accomplished">Accomplished?</string>
    <string name="button_home">Home</string>
    <string name="button_mytasks">My Tasks</string>
    <string name="button_myprofile">My Profile</string>
    <string name="text_name">Update Display Name</string>
    <string name="text_bio">Update Bio</string>
    <string name="button_bio">Update User Info</string>
    <string name="button_device">Add Device</string>
    <string name="button_create_task">Add Task</string>
    <string name="button_view_all">View All Tasks</string>
</resources>
