<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/task_entry"
        android:layout_width="0dp"
        android:layout_height="390dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:labelFor="@id/task_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="8dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="onAddTaskClick"
        android:text="@string/button_add"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_get"
        app:layout_constraintTop_toBottomOf="@+id/task_entry"
        app:layout_constraintVertical_bias="0.503" />

    <Button
        android:id="@+id/button_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="onViewAllTasksClick"
        android:text="@string/button_get"
        app:layout_constraintBottom_toTopOf="@+id/button_mytasks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_entry"
        app:layout_constraintVertical_bias="0.503" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="12dp"
        android:onClick="onLoginClick"
        android:text="@string/button_login"
        app:layout_constraintBottom_toTopOf="@+id/button_logout"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="8dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="onLogoutClick"
        android:text="@string/button_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_mytasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="onMyTaskButtonClick"
        android:text="@string/button_mytasks"
        app:layout_constraintBottom_toTopOf="@+id/button_myprofile"
        app:layout_constraintEnd_toStartOf="@+id/button_login"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_myprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="onMyProfileButtonClick"
        android:text="@string/button_myprofile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_logout"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>